# matrix_notifier

./: README.md  config.py.sample  pyproject.toml  send_message.py  start.sh
matrix_notifier/: app.py  matrix_connection.py  server.py
